Integrated machine learning into the new object structure